--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -187,7 +187,7 @@ $$
 
 \subsubsection{'*' unary operator}
 $$
-(*): pointer <type> \longrightarrow <type> 
+(*): pointer \ a \longrightarrow a
 $$
 
 \subsubsection{'+' binary operator}
@@ -286,15 +286,20 @@ $$
 $$
 (\mid\mid): bool \times bool \longrightarrow bool
 $$
+\subsubsection{'$>>$' binary operator}
+Moves pointer by n offsets
+$$
+(>>): pointer \ a \times int \longrightarrow Pointer \ a
+$$
 \subsubsection{'if' conditional operator}
 $$
 if \ bool \ do \ <block> \ end
 $$
-\subsubsection{'while' binary operator}
+\subsubsection{'while' operator}
 $$
 while \ bool \ do \ <block> \ end
 $$
-\subsubsection{'for' binary operator}
+\subsubsection{'for' operator}
 $$
 for \ <type> \ bool \ <type> \ do \ <block> \ end
 $$
