--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -187,7 +187,7 @@ $$
 
 \subsubsection{'*' unary operator}
 $$
-(*): pointer \ a \longrightarrow a
+(*): pointer \ <type> \longrightarrow <type>
 $$
 
 \subsubsection{'+' binary operator}
@@ -289,7 +289,7 @@ $$
 \subsubsection{'$>>$' binary operator}
 Moves pointer by n offsets
 $$
-(>>): pointer \ a \times int \longrightarrow Pointer \ a
+(>>): pointer \ <type> \times int \longrightarrow pointer \ <type>
 $$
 \subsubsection{'if' conditional operator}
 $$
